--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,8 @@ frontend/vite.config.d.ts
 
 ### macOS ###
 .DS_Store
+
+jenkins/Jenkinsfile.develop
+jenkins/Jenkinsfile.feature
+jenkins/Jenkinsfile.main
+jenkins/stages.groovy
